# songbook

./: .babelrc.json  .dockerignore  .editorconfig  .envrc  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc  .woodpecker.yaml  .yarnrc.yml  Cargo.toml  Dockerfile  README.md  biome.json  build-ci.js  devshell.toml  extract.js  firebase.json  firestore.rules  flake.nix  i18next-parser.config.js  index.html  index.js  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.js  song-parse.ts  song-to-json.mjs  song.grammar  tsconfig-src.json  tsconfig.json  update-songs.mjs  vite.config.ts  webpack.config.js  wrangler.toml  zellij-layout.kdl
.yarn/: yarn-project.nix
.zed/: settings.json
api/: .gitignore  graphql.ts  package-lock.json  package.json  secrets-example.json  tsconfig.json  ultimate-guitar.ts
backend/: .babelrc.js  .dev.vars.example  .eslintrc.js  .funcignore  .gcloudignore  .gitignore  .oxlintrc.json  .prettierrc  README.md  backend.nix  bun.lockb  drizzle.config.ts  handler.js  import-map.json  mysql.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postgresql.mjs  secrets-example.json  serverless.yml  tsconfig.json  webpack.config.js  webpack.config.ts
config/: env.js  paths.js  webpack.config.js  webpackDevServer.config.js
frontend/: .babelrc-base.js  .babelrc.js  .eslintignore  .eslintrc  .eslintrc.js  .firebaserc  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc  README.md  babel-plugin-remove-jsx-namespace.js  build-ci.js  extract.js  firebase.json  firestore.rules  frontend.nix  i18next-parser.config.js  i18next.config.ts  index.html  isa-scripts.json  now.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.js  tailwind.config.js  tsconfig-src.json  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.js  webpack.rules.js
public/: index.html  manifest.json
renderer/: Cargo.toml  index.html  index.ts  justfile  pnpm-lock.yaml  rust-toolchain.toml  song-parse.ts  vite.config.ts
renderer/songbook-render-pdf/: Cargo.toml
renderer/songbook-render-pdf/src/: booklet.rs  collection.rs  lib.rs  title_page.rs  wasm.rs
rust/: Cargo.toml
scripts/: build.js  download-collection.mjs  patch.js  song-to-json.mjs  start.js  test.js  update-songs.mjs
server/: package.json  tsconfig.json
snapshots/: README.md  collections.json  songs.json
songbook-layout/: Cargo.toml
songbook-render-canvas/: Cargo.toml
songbook-render-canvas/src/: lib.rs  render_song.rs
songbook-render-html/: Cargo.toml
songbook-render-html/src/: lib.rs  render_song_html.rs
songbook-render-pdf/: Cargo.toml
songbook-renderer/: Cargo.toml
songbook-renderer/src/: layout_song.rs  layout_song_naive.rs  lib.rs  render_pdf.rs  render_song.rs  song_layout.rs  utils.rs
songbook-renderer/src/grammar/: grammar.rs  grammar_src.rs  mod.rs
songs/: batalion-spiritual-kvintet.song  behind-blue-eyes-limp-bizkit.song  buchet-je-spousta-kouzla-kralu.song  cernej-pasazer-traband.song  dva-havrani-asonance.song  hlidac-krav-jaromir-nohavica.song  holubi-dum-j-schelinger.song  ja-s-tebou-zit-nebudu-nerez.song  jdem-zpatky-do-lesu-zalman.song  jednou-mi-fotr-povida-ivan-hlas.song  jelen-jelen.song  jeste-jedno-kafe-druha-trava.song  karavana-mraku-karel-kryl.song  krasojezdkyne-traband.song  krysar-znouzectnost.song  marathon-raduza.song  matfyzak-na-discu-pokac.song  na-kolena-ivan-hlas.song  never-ending-story-limahl.song  nosorozec-karel-plihal.song  poveste-ho-vejs-michal-tucny.song  prodavac-michal-tucny.song  prvni-signalni-chinaski.song  saro-traband.song  sipkova-ruzenka-jiri-schelinger.song  (+4 more)
(+725 files in other folders)
