[package]
name = "songbook-render-html"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
songbook-grammar = {path="../songbook-grammar"}
songbook-layout = {path="../songbook-layout"}
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0.98"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
