[package]
name = "songbook-renderer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
oxidize-pdf = "1.0.0"
parley = "0.5.0"
piet = "0.7.0"
piet-web = "0.7.0"
wasm-bindgen = "0.2.100"
songbook-grammar = {path="../songbook-grammar"}

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
]
