[package]
name = "songbook-render-pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
icu_collator = "2.2.1"
icu_locale_core = "2.2.0"
krilla = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
songbook-grammar = { path = "../songbook-grammar" }
songbook-layout = { path = "../songbook-layout" }

[[bin]]
name = "render-pdf"
path = "src/main.rs"

[[bin]]
name = "render-collection"
path = "src/collection.rs"
