[package]
name = "songbook-render-pdf"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
icu_collator = "2.2.1"
icu_locale_core = "2.2.0"
krilla = { version = "0.8.2", default-features = false, features = ["pdf", "simple-text"] }
skrifa = "=0.42.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
songbook-grammar = { path = "../songbook-grammar" }
songbook-layout = { path = "../songbook-layout" }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
web-time = "1.1.0"

[[bin]]
name = "render-pdf"
path = "src/main.rs"

[[bin]]
name = "render-collection"
path = "src/collection.rs"
